build/log/idf_py_stdout_output_8572
[1/11] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D C:\Users\Usuario\Documents\esp32s3\mqtt-tcp\build\bootloader\esp-idf\esptool_py && C:\Espressif\python_env\idf5.2_py3.11_env\Scripts\python.exe C:/Espressif/frameworks/esp-idf-v5.2.1-4/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 C:/Users/Usuario/Documents/esp32s3/mqtt-tcp/build/bootloader/bootloader.bin"
Bootloader binary size 0x6860 bytes. 0x7a0 bytes (7%) free.
[2/9] Building C object esp-idf/st7789/CMakeFiles/__idf_st7789.dir/st7789.c.obj
FAILED: esp-idf/st7789/CMakeFiles/__idf_st7789.dir/st7789.c.obj 
ccache C:\Espressif\tools\xtensa-esp-elf\esp-13.2.0_20230928\xtensa-esp-elf\bin\xtensa-esp32-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.2.1\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/Users/Usuario/Documents/esp32s3/mqtt-tcp/build/config -IC:/Users/Usuario/Documents/esp32s3/mqtt-tcp/components/st7789/include -IC:/Espressif/frameworks/esp-idf-v5.2.1-4/components/newlib/platform_include -IC:/Espressif/frameworks/esp-idf-v5.2.1-4/components/freertos/config/include -IC:/Espressif/frameworks/esp-idf-v5.2.1-4/components/freertos/config/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.2.1-4/components/freertos/config/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.2.1-4/components/freertos/FreeRTOS-Kernel/include -IC:/Espressif/frameworks/esp-idf-v5.2.1-4/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.2.1-4/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.2.1-4/components/freertos/esp_additions/include -IC:/Espressif/frameworks/esp-idf-v5.2.1-4/components/esp_hw_support/include -IC:/Espressif/frameworks/esp-idf-v5.2.1-4/components/esp_hw_support/include/soc -IC:/Espressif/frameworks/esp-idf-v5.2.1-4/components/esp_hw_support/include/soc/esp32 -IC:/Espressif/frameworks/esp-idf-v5.2.1-4/components/esp_hw_support/port/esp32/. -IC:/Espressif/frameworks/esp-idf-v5.2.1-4/components/heap/include -IC:/Espressif/frameworks/esp-idf-v5.2.1-4/components/log/include -IC:/Espressif/frameworks/esp-idf-v5.2.1-4/components/soc/include -IC:/Espressif/frameworks/esp-idf-v5.2.1-4/components/soc/esp32 -IC:/Espressif/frameworks/esp-idf-v5.2.1-4/components/soc/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.2.1-4/components/hal/platform_port/include -IC:/Espressif/frameworks/esp-idf-v5.2.1-4/components/hal/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.2.1-4/components/hal/include -IC:/Espressif/frameworks/esp-idf-v5.2.1-4/components/esp_rom/include -IC:/Espressif/frameworks/esp-idf-v5.2.1-4/components/esp_rom/include/esp32 -IC:/Espressif/frameworks/esp-idf-v5.2.1-4/components/esp_rom/esp32 -IC:/Espressif/frameworks/esp-idf-v5.2.1-4/components/esp_common/include -IC:/Espressif/frameworks/esp-idf-v5.2.1-4/components/esp_system/include -IC:/Espressif/frameworks/esp-idf-v5.2.1-4/components/esp_system/port/soc -IC:/Espressif/frameworks/esp-idf-v5.2.1-4/components/esp_system/port/include/private -IC:/Espressif/frameworks/esp-idf-v5.2.1-4/components/xtensa/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.2.1-4/components/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.2.1-4/components/xtensa/deprecated_include -IC:/Espressif/frameworks/esp-idf-v5.2.1-4/components/lwip/include -IC:/Espressif/frameworks/esp-idf-v5.2.1-4/components/lwip/include/apps -IC:/Espressif/frameworks/esp-idf-v5.2.1-4/components/lwip/include/apps/sntp -IC:/Espressif/frameworks/esp-idf-v5.2.1-4/components/lwip/lwip/src/include -IC:/Espressif/frameworks/esp-idf-v5.2.1-4/components/lwip/port/include -IC:/Espressif/frameworks/esp-idf-v5.2.1-4/components/lwip/port/freertos/include -IC:/Espressif/frameworks/esp-idf-v5.2.1-4/components/lwip/port/esp32xx/include -IC:/Espressif/frameworks/esp-idf-v5.2.1-4/components/lwip/port/esp32xx/include/arch -IC:/Espressif/frameworks/esp-idf-v5.2.1-4/components/lwip/port/esp32xx/include/sys -IC:/Espressif/frameworks/esp-idf-v5.2.1-4/components/driver/include -IC:/Espressif/frameworks/esp-idf-v5.2.1-4/components/driver/deprecated -IC:/Espressif/frameworks/esp-idf-v5.2.1-4/components/driver/analog_comparator/include -IC:/Espressif/frameworks/esp-idf-v5.2.1-4/components/driver/dac/include -IC:/Espressif/frameworks/esp-idf-v5.2.1-4/components/driver/gpio/include -IC:/Espressif/frameworks/esp-idf-v5.2.1-4/components/driver/gptimer/include -IC:/Espressif/frameworks/esp-idf-v5.2.1-4/components/driver/i2c/include -IC:/Espressif/frameworks/esp-idf-v5.2.1-4/components/driver/i2s/include -IC:/Espressif/frameworks/esp-idf-v5.2.1-4/components/driver/ledc/include -IC:/Espressif/frameworks/esp-idf-v5.2.1-4/components/driver/mcpwm/include -IC:/Espressif/frameworks/esp-idf-v5.2.1-4/components/driver/parlio/include -IC:/Espressif/frameworks/esp-idf-v5.2.1-4/components/driver/pcnt/include -IC:/Espressif/frameworks/esp-idf-v5.2.1-4/components/driver/rmt/include -IC:/Espressif/frameworks/esp-idf-v5.2.1-4/components/driver/sdio_slave/include -IC:/Espressif/frameworks/esp-idf-v5.2.1-4/components/driver/sdmmc/include -IC:/Espressif/frameworks/esp-idf-v5.2.1-4/components/driver/sigma_delta/include -IC:/Espressif/frameworks/esp-idf-v5.2.1-4/components/driver/spi/include -IC:/Espressif/frameworks/esp-idf-v5.2.1-4/components/driver/temperature_sensor/include -IC:/Espressif/frameworks/esp-idf-v5.2.1-4/components/driver/touch_sensor/include -IC:/Espressif/frameworks/esp-idf-v5.2.1-4/components/driver/twai/include -IC:/Espressif/frameworks/esp-idf-v5.2.1-4/components/driver/uart/include -IC:/Espressif/frameworks/esp-idf-v5.2.1-4/components/driver/usb_serial_jtag/include -IC:/Espressif/frameworks/esp-idf-v5.2.1-4/components/driver/touch_sensor/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.2.1-4/components/esp_pm/include -IC:/Espressif/frameworks/esp-idf-v5.2.1-4/components/esp_ringbuf/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=C:/Users/Usuario/Documents/esp32s3/mqtt-tcp=. -fmacro-prefix-map=C:/Espressif/frameworks/esp-idf-v5.2.1-4=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/st7789/CMakeFiles/__idf_st7789.dir/st7789.c.obj -MF esp-idf\st7789\CMakeFiles\__idf_st7789.dir\st7789.c.obj.d -o esp-idf/st7789/CMakeFiles/__idf_st7789.dir/st7789.c.obj -c C:/Users/Usuario/Documents/esp32s3/mqtt-tcp/components/st7789/st7789.c
C:/Users/Usuario/Documents/esp32s3/mqtt-tcp/components/st7789/st7789.c:33:28: error: unknown type name 'ST7789_PinConfig_t'
   33 | void st7789_init_spi(const ST7789_PinConfig_t *pin_config) {
      |                            ^~~~~~~~~~~~~~~~~~
C:/Users/Usuario/Documents/esp32s3/mqtt-tcp/components/st7789/st7789.c: In function 'st7789_init_spi':
C:/Users/Usuario/Documents/esp32s3/mqtt-tcp/components/st7789/st7789.c:37:34: error: request for member 'mosi_pin' in something not a structure or union
   37 |         .mosi_io_num = pin_config->mosi_pin,
      |                                  ^~
C:/Users/Usuario/Documents/esp32s3/mqtt-tcp/components/st7789/st7789.c:39:34: error: request for member 'sclk_pin' in something not a structure or union
   39 |         .sclk_io_num = pin_config->sclk_pin,
      |                                  ^~
C:/Users/Usuario/Documents/esp32s3/mqtt-tcp/components/st7789/st7789.c:46:40: error: request for member 'host_id' in something not a structure or union
   46 |     ret = spi_bus_initialize(pin_config->host_id, &buscfg, SPI_DMA_CH_AUTO);
      |                                        ^~
C:/Users/Usuario/Documents/esp32s3/mqtt-tcp/components/st7789/st7789.c:54:29: error: 'clock_speed_hz' undeclared (first use in this function)
   54 |     devcfg.clock_speed_hz = clock_speed_hz;
      |                             ^~~~~~~~~~~~~~
C:/Users/Usuario/Documents/esp32s3/mqtt-tcp/components/st7789/st7789.c:54:29: note: each undeclared identifier is reported only once for each function it appears in
C:/Users/Usuario/Documents/esp32s3/mqtt-tcp/components/st7789/st7789.c:59:19: error: request for member 'cs_pin' in something not a structure or union
   59 |     if (pin_config->cs_pin >= 0) {
      |                   ^~
C:/Users/Usuario/Documents/esp32s3/mqtt-tcp/components/st7789/st7789.c:60:41: error: request for member 'cs_pin' in something not a structure or union
   60 |         devcfg.spics_io_num = pin_config->cs_pin;
      |                                         ^~
C:/Users/Usuario/Documents/esp32s3/mqtt-tcp/components/st7789/st7789.c:66:40: error: request for member 'host_id' in something not a structure or union
   66 |     ret = spi_bus_add_device(pin_config->host_id, &devcfg, &handle);
      |                                        ^~
[3/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/app_main.c.obj
ninja: build stopped: subcommand failed.
